--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
             </header>
             <section id="cv-section">
               <p>You can view my resume by clicking the button below:</p>
-              <a href="assets/file/Abdelrahman_cv.pdf" class="btn view-btn" target="_self">
+              <a href="https://drive.google.com/file/d/1Ecvsczi5xv3L9o1FtymTQ5wXQ0GoVqZQ/view?usp=drive_link" class="btn view-btn" target="_self">
                 <ion-icon name="eye-outline"></ion-icon>
                 View CV
               </a>
-              <a href="assets/file/Abdelrahman_cv.pdf" class="btn download-btn" download>
+              <a href="https://drive.google.com/file/d/1Ecvsczi5xv3L9o1FtymTQ5wXQ0GoVqZQ/view?usp=drive_link" class="btn download-btn" download>
                 <ion-icon name="download-outline"></ion-icon>
                 Download CV
               </a>
