--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 
           <!-- about me  -->
           <section class="about-text">
-            <p>I am looking for a challenging job position in an organization to use my experience and skills effectively.
-              Which provides me with a great opportunity, growth opportunity and a good working environment where I can use
-              my full potential to serve the organization.</p>
-            <p>My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-              Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is
-              to bring across your message and identity in the most creative way.</p>
+            <p>Hello! I'm Abdelrahman Faiz, a full stack web developer specializing in HTML, CSS, JavaScript, bootstrap, and React. I am currently focused on designing and developing innovative websites that prioritize aesthetics and ease of use.</p>
+            <p> am passionate about enhancing user experiences and designing interactive interfaces that make users feel comfortable and intuitive while interacting with websites. I always focus on attention to detail and achieving a balance between aesthetics and functionality in interface design.</p>
+            <p>In addition to my programming skills, I frequently use Bootstrap in my projects to speed up development and ensure responsive designs across all devices. I believe that using these tools contributes to improving performance and simplifying complex designs.</p>
+            <p>My ambition is to continue learning more and applying new techniques to further enhance my skills and reach the highest levels of quality.</p>
+            <p>I am looking for a challenging job position in an organization to use my experience and skills effectively. Which provides me with a great opportunity, growth opportunity and a good working environment where I can use my full potential to serve the organization.</p>
+            <p>My job is to build your website so that it is functional and user-friendly but at the same time attractive. Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring across your message and identity in the most creative way.</p>
           </section>
 
           <!-- what i’m doing?  -->
